--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -505,4 +505,25 @@
     right: 0;
     left: auto;
   }
+
+  .notifications {
+    position: relative; 
+  }
+
+  .notifications-dropdown {
+    position: fixed;
+    top: 60px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: calc(100vw - 1rem);
+    max-width: 420px;
+  }
+
+  #notificationCount {
+    top: -4px;
+    right: -4px;
+    font-size: 11px;
+    padding: 3px 6px;
+  }
 }
